--- a/infra/base-images/base-builder/Dockerfile
+++ b/infra/base-images/base-builder/Dockerfile
@@ -52,6 +52,7 @@ RUN mkdir afl && \
     rm -rf $SRC/afl-latest.tgz
 
 ADD https://raw.githubusercontent.com/jay/showlinenum/develop/showlinenum.awk $SRC/
+ADD afl.patch $SRC/
 
 COPY compile compile_afl compile_aflgo compile_libfuzzer coverage_report srcmap /usr/local/bin/
 
